--- a/client/css/styles.scss
+++ b/client/css/styles.scss
@@ -1,3 +1,6 @@
+@import ".meteor/local/build/programs/server/assets/packages/matthew_foundation5-sass/foundation";
+
+
 *{
 
 }
@@ -7,7 +10,11 @@ html{
 }
 
 body{
-    background-color: #FFF;
+
+}
+
+span{
+    cursor: pointer;
 }
 
 .icon-large{
@@ -23,4 +30,12 @@ body{
 .icon-small{
       font-size: 20px;
     line-height: 20px;
+}
+
+.right{
+    float: right;
+}
+
+.left{
+    float: left;
 }
