--- a/client/css/styles.scss
+++ b/client/css/styles.scss
@@ -5,6 +5,7 @@
 
 }
 
+
 html{
 
 }
@@ -15,6 +16,10 @@ body{
 
 span{
     cursor: pointer;
+}
+
+datalist {
+    display: block;
 }
 
 .icon-large{
